fix(github workflow): add cargo unit test

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -38,6 +38,10 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
+      - name: 🧪 Run tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
       - name: 📚 Test docs
         uses: actions-rs/cargo@v1
         with:
