--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ license = "MIT"
 
 [workspace.dependencies]
 anyhow = "1.0"
+itertools = "0.14.0"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
