--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "crates/parser",
     "crates/stratifier",
-    "crates/catalog"
+    "crates/catalog",
+    "crates/optimizer"
 ]
 resolver = "2"
 
