Checkpoint from VS Code for coding agent session

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ members = [
     "crates/parser",
     "crates/stratifier",
     "crates/catalog",
-    "crates/optimizer"
+    "crates/optimizer",
+    "crates/planner"
 ]
 resolver = "2"
 
