--- a/crates/catalog/Cargo.toml
+++ b/crates/catalog/Cargo.toml
@@ -2,6 +2,8 @@
 name = "catalog"
 version.workspace = true
 edition.workspace = true
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
 tracing.workspace = true
