--- a/crates/planner/Cargo.toml
+++ b/crates/planner/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
-name = "optimizer"
+name = "planner"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
 [dependencies]
-tracing.workspace = true
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
-
 catalog = { path = "../catalog" }
 parser = { path = "../parser" }
-stratifier = { path = "../stratifier" }
+
