--- a/crates/stratifier/Cargo.toml
+++ b/crates/stratifier/Cargo.toml
@@ -2,6 +2,8 @@
 name = "stratifier"
 version.workspace = true
 edition.workspace = true
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
 tracing.workspace = true
