--- a/crates/planner/Cargo.toml
+++ b/crates/planner/Cargo.toml
@@ -8,4 +8,5 @@ license.workspace = true
 [dependencies]
 catalog = { path = "../catalog" }
 parser = { path = "../parser" }
+optimizer = { path = "../optimizer" }
 
