--- a/crates/planner/Cargo.toml
+++ b/crates/planner/Cargo.toml
@@ -9,4 +9,5 @@ license.workspace = true
 catalog = { path = "../catalog" }
 parser = { path = "../parser" }
 optimizer = { path = "../optimizer" }
+stratifier = { path = "../stratifier" }
 
