--- a/crates/planner/Cargo.toml
+++ b/crates/planner/Cargo.toml
@@ -6,6 +6,9 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
+tracing.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+
 catalog = { path = "../catalog" }
 parser = { path = "../parser" }
 optimizer = { path = "../optimizer" }
