feat(executor): add initial workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "crates/stratifier",
     "crates/catalog",
     "crates/optimizer",
-    "crates/planner"
+    "crates/planner",
+    "crates/executor"
 ]
 resolver = "2"
 
