--- a/crates/generator/Cargo.toml
+++ b/crates/generator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "executor"
+name = "generator"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -10,6 +10,7 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 clap = { version = "4.5.15", features = ["derive"] }
 
+args = { path = "../args" }
 catalog = { path = "../catalog" }
 planner = { path = "../planner" }
 parser = { path = "../parser" }
