--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 [dependencies]
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+clap = { version = "4.5.15", features = ["derive"] }
+
+args = { path = "../args" }
 
 # Parser-specific dependencies
 pest = "2.8"
