--- a/crates/planner/Cargo.toml
+++ b/crates/planner/Cargo.toml
@@ -8,7 +8,9 @@ license.workspace = true
 [dependencies]
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+clap = { version = "4.5.15", features = ["derive"] }
 
+args = { path = "../args" }
 catalog = { path = "../catalog" }
 parser = { path = "../parser" }
 optimizer = { path = "../optimizer" }
