--- a/crates/stratifier/Cargo.toml
+++ b/crates/stratifier/Cargo.toml
@@ -9,5 +9,7 @@ license.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 itertools.workspace = true
+clap = { version = "4.5.15", features = ["derive"] }
 
+args = { path = "../args" }
 parser = { path = "../parser" }
