--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "args"
+name = "common"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -7,3 +7,4 @@ license.workspace = true
 
 [dependencies]
 clap = { version = "4.5.15", features = ["derive"] }
+tracing = "0.1"
