--- a/crates/catalog/Cargo.toml
+++ b/crates/catalog/Cargo.toml
@@ -10,5 +10,5 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 clap = { version = "4.5.15", features = ["derive"] }
 
-args = { path = "../args" }
+common = { path = "../common" }
 parser = { path = "../parser" }
