--- a/crates/generator/Cargo.toml
+++ b/crates/generator/Cargo.toml
@@ -10,7 +10,7 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 clap = { version = "4.5.15", features = ["derive"] }
 
-args = { path = "../args" }
+common = { path = "../common" }
 catalog = { path = "../catalog" }
 planner = { path = "../planner" }
 parser = { path = "../parser" }
