--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -10,7 +10,7 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 clap = { version = "4.5.15", features = ["derive"] }
 
-args = { path = "../args" }
+common = { path = "../common" }
 
 # Parser-specific dependencies
 pest = "2.8"
