--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ license = "MIT"
 
 [workspace.dependencies]
 anyhow = "1.0"
+clap = "4.5.51"
 itertools = "0.14.0"
+proc-macro2 = "1.0.103"
+quote = "1.0.41"
+syn = "2.0.108"
+toml_edit = "0.23"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
