--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -6,5 +6,5 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-clap = { version = "4.5.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 tracing = "0.1"
