--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 [dependencies]
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-clap = { version = "4.5.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 
 common = { path = "../common" }
 
