--- a/crates/stratifier/Cargo.toml
+++ b/crates/stratifier/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 itertools.workspace = true
-clap = { version = "4.5.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 
 common = { path = "../common" }
 parser = { path = "../parser" }
