--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ license = "MIT"
 anyhow = "1.0"
 clap = "4.5.51"
 itertools = "0.14.0"
+prettyplease = "0.2"
 proc-macro2 = "1.0.103"
-quote = "1.0.41"
-syn = "2.0.108"
+quote = "1.0.42"
+syn = "2.0.110"
 toml_edit = "0.23"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
