--- a/crates/generator/Cargo.toml
+++ b/crates/generator/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 clap = { workspace = true, features = ["derive"] }
+prettyplease = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
