[debug]: add per rule plan tree debug info.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "crates/catalog",
     "crates/optimizer",
     "crates/planner",
-    "crates/generator"
+    "crates/compiler"
 ]
 resolver = "2"
 
