--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -6,7 +6,7 @@ authors.workspace = true
 license.workspace = true
 
 [[bin]]
-name = "flowlog-compiler"
+name = "flowlog"
 path = "src/main.rs"
 
 [dependencies]
