--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -43,6 +43,6 @@ jobs:
         with:
           command: test
       - name: 🏁 Run batch smoke test
-        run: 
+        run: |
           bash tools/check/batch.sh --compile-only
           bash tools/check/batch.sh tools/check/config_ci.txt
