--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -19,9 +19,10 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 toml_edit = { workspace = true }
 
-common = { path = "../common" }
 catalog = { path = "../catalog" }
-planner = { path = "../planner" }
-parser = { path = "../parser" }
-stratifier = { path = "../stratifier" }
+common = { path = "../common" }
 optimizer = { path = "../optimizer" }
+parser = { path = "../parser" }
+planner = { path = "../planner" }
+stratifier = { path = "../stratifier" }
+profiler = { path = "../profiler" }
